--- a/static/template/assets/css/style.css
+++ b/static/template/assets/css/style.css
@@ -1,9 +1,15 @@
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 :root {
   scroll-behavior: smooth;
+  /* THEME COLOUR */
+  --colour1: #4154f1; /* Heading Light Colour #4154f1 */
+  --colour2: #012970; /* Heading Dark Colour #012970 */
+  --colour3: #717ff5; /* Hover Colour #717ff5 */
+  --colour4: #6776f4; /* Background Colour #6776f4 */
+  --colour5: rgba(1, 41, 112, 0.5); /* Profile's Link Colour rgba(1, 41, 112, 0.5) */
+  --colour6: rgba(1, 41, 112, 0.6); /* Profile's Link Colour rgba(1, 41, 112, 0.6) */
+  --colour7: #5969f3; /* Contact Message Btn #5969f3 */
+  --colour8: #51678f; /* Error Page Btn #51678f */
+  --colour9: #3e4f6f; /* Error Page Hover Btn #51678f */
 }
 
 body {
@@ -13,12 +19,12 @@ body {
 }
 
 a {
-  color: #4154f1;
+  color: var(--colour1);
   text-decoration: none;
 }
 
 a:hover {
-  color: #717ff5;
+  color: var(--colour3);
   text-decoration: none;
 }
 
@@ -50,7 +56,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 24px;
   margin-bottom: 0;
   font-weight: 600;
-  color: #012970;
+  color: var(--colour2);
 }
 
 /*--------------------------------------------------------------
@@ -63,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #4154f1;
+  background: var(--colour1);
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -75,7 +81,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #6776f4;
+  background: var(--colour4);
   color: #fff;
 }
 .back-to-top.active {
@@ -220,7 +226,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 20px 0 15px 0;
   font-size: 18px;
   font-weight: 500;
-  color: #012970;
+  color: var(--colour2);
   font-family: "Poppins", sans-serif;
 }
 .card-title span {
@@ -262,7 +268,7 @@ h1, h2, h3, h4, h5, h6 {
   box-shadow: none;
 }
 .accordion-button:not(.collapsed) {
-  color: #012970;
+  color: var(--colour2);
   background-color: #f6f9ff;
 }
 
@@ -273,7 +279,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .accordion-flush .accordion-button:not(.collapsed) {
   box-shadow: none;
-  color: #4154f1;
+  color: var(--colour1);
 }
 .accordion-flush .accordion-body {
   padding: 0 0 15px 0;
@@ -313,12 +319,12 @@ h1, h2, h3, h4, h5, h6 {
   color: #2c384e;
 }
 .nav-tabs-bordered .nav-link:hover, .nav-tabs-bordered .nav-link:focus {
-  color: #4154f1;
+  color: var(--colour1);
 }
 .nav-tabs-bordered .nav-link.active {
   background-color: #fff;
-  color: #4154f1;
-  border-bottom: 2px solid #4154f1;
+  color: var(--colour1);
+  border-bottom: 2px solid var(--colour1);
 }
 
 /*--------------------------------------------------------------
@@ -339,7 +345,7 @@ h1, h2, h3, h4, h5, h6 {
 .logo span {
   font-size: 26px;
   font-weight: 700;
-  color: #012970;
+  color: var(--colour2);
   font-family: "Nunito", sans-serif;
 }
 
@@ -357,7 +363,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 32px;
   padding-left: 10px;
   cursor: pointer;
-  color: #012970;
+  color: var(--colour2);
 }
 .header .search-bar {
   min-width: 360px;
@@ -389,7 +395,7 @@ h1, h2, h3, h4, h5, h6 {
 .header .search-form input {
   border: 0;
   font-size: 14px;
-  color: #012970;
+  color: var(--colour2);
   border: 1px solid rgba(1, 41, 112, 0.2);
   padding: 7px 38px 7px 8px;
   border-radius: 3px;
@@ -408,7 +414,7 @@ h1, h2, h3, h4, h5, h6 {
   background: none;
 }
 .header .search-form button i {
-  color: #012970;
+  color: var(--colour2);
 }
 
 /*--------------------------------------------------------------
@@ -423,10 +429,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 .header-nav .nav-icon {
   font-size: 20px;
-  color: #012970;
+  color: var(--colour2);
 }
 .header-nav .nav-profile {
-  color: #012970;
+  color: var(--colour2);
 }
 .header-nav .nav-profile img {
   max-height: 36px;
@@ -593,7 +599,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   font-size: 15px;
   font-weight: 600;
-  color: #4154f1;
+  color: var(--colour1);
   transition: 0.3;
   background: #f6f9ff;
   padding: 10px 15px;
@@ -602,21 +608,21 @@ h1, h2, h3, h4, h5, h6 {
 .sidebar-nav .nav-link i {
   font-size: 16px;
   margin-right: 10px;
-  color: #4154f1;
+  color: var(--colour1);
 }
 .sidebar-nav .nav-link.collapsed {
-  color: #012970;
+  color: var(--colour2);
   background: #fff;
 }
 .sidebar-nav .nav-link.collapsed i {
   color: #899bbd;
 }
 .sidebar-nav .nav-link:hover {
-  color: #4154f1;
+  color: var(--colour1);
   background: #f6f9ff;
 }
 .sidebar-nav .nav-link:hover i {
-  color: #4154f1;
+  color: var(--colour1);
 }
 .sidebar-nav .nav-link .bi-chevron-down {
   margin-right: 0;
@@ -635,7 +641,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   font-size: 14px;
   font-weight: 600;
-  color: #012970;
+  color: var(--colour2);
   transition: 0.3;
   padding: 10px 0 10px 40px;
   transition: 0.3s;
@@ -647,10 +653,10 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50%;
 }
 .sidebar-nav .nav-content a:hover, .sidebar-nav .nav-content a.active {
-  color: #4154f1;
+  color: var(--colour1);
 }
 .sidebar-nav .nav-content a.active i {
-  background-color: #4154f1;
+  background-color: var(--colour1);
 }
 
 /*--------------------------------------------------------------
@@ -670,7 +676,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 16px;
 }
 .dashboard .filter .icon:hover, .dashboard .filter .icon:focus {
-  color: #4154f1;
+  color: var(--colour1);
 }
 .dashboard .filter .dropdown-header {
   padding: 8px 15px;
@@ -694,7 +700,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .dashboard .info-card h6 {
   font-size: 28px;
-  color: #012970;
+  color: var(--colour2);
   font-weight: 700;
   margin: 0;
   padding: 0;
@@ -708,7 +714,7 @@ h1, h2, h3, h4, h5, h6 {
   flex-grow: 0;
 }
 .dashboard .sales-card .card-icon {
-  color: #4154f1;
+  color: var(--colour1);
   background: #f6f6fe;
 }
 .dashboard .revenue-card .card-icon {
@@ -777,11 +783,11 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 5px;
 }
 .dashboard .news h4 a {
-  color: #012970;
+  color: var(--colour2);
   transition: 0.3s;
 }
 .dashboard .news h4 a:hover {
-  color: #4154f1;
+  color: var(--colour1);
 }
 .dashboard .news p {
   font-size: 14px;
@@ -838,7 +844,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #fff;
   border-radius: 0.25rem;
   text-align: center;
-  color: #012970;
+  color: var(--colour2);
   padding: 15px 0;
 }
 .iconslist i {
@@ -875,28 +881,28 @@ h1, h2, h3, h4, h5, h6 {
 .profile .profile-card .social-links a {
   font-size: 20px;
   display: inline-block;
-  color: rgba(1, 41, 112, 0.5);
+  color: var(--colour5);
   line-height: 0;
   margin-right: 10px;
   transition: 0.3s;
 }
 .profile .profile-card .social-links a:hover {
-  color: #012970;
+  color: var(--colour2);
 }
 .profile .profile-overview .row {
   margin-bottom: 20px;
   font-size: 15px;
 }
 .profile .profile-overview .card-title {
-  color: #012970;
+  color: var(--colour2);
 }
 .profile .profile-overview .label {
   font-weight: 600;
-  color: rgba(1, 41, 112, 0.6);
+  color: var(--colour6);
 }
 .profile .profile-edit label {
   font-weight: 600;
-  color: rgba(1, 41, 112, 0.6);
+  color: var(--colour6);
 }
 .profile .profile-edit img {
   max-width: 120px;
@@ -908,7 +914,7 @@ h1, h2, h3, h4, h5, h6 {
 .faq .basic h6 {
   font-size: 18px;
   font-weight: 600;
-  color: #4154f1;
+  color: var(--colour1);
 }
 .faq .basic p {
   color: #6980aa;
@@ -923,11 +929,11 @@ h1, h2, h3, h4, h5, h6 {
 .contact .info-box i {
   font-size: 38px;
   line-height: 0;
-  color: #4154f1;
+  color: var(--colour1);
 }
 .contact .info-box h3 {
   font-size: 20px;
-  color: #012970;
+  color: var(--colour2);
   font-weight: 700;
   margin: 20px 0 10px 0;
 }
@@ -981,7 +987,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 0;
 }
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #4154f1;
+  border-color: var(--colour1);
 }
 .contact .php-email-form input {
   padding: 10px 15px;
@@ -990,7 +996,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 12px 15px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #4154f1;
+  background: var(--colour1);
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -998,7 +1004,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 4px;
 }
 .contact .php-email-form button[type=submit]:hover {
-  background: #5969f3;
+  background: var(--colour7);
 }
 @-webkit-keyframes animate-loading {
   0% {
@@ -1026,23 +1032,23 @@ h1, h2, h3, h4, h5, h6 {
 .error-404 h1 {
   font-size: 180px;
   font-weight: 700;
-  color: #4154f1;
+  color: var(--colour1);
   margin-bottom: 0;
   line-height: 150px;
 }
 .error-404 h2 {
   font-size: 24px;
   font-weight: 700;
-  color: #012970;
+  color: var(--colour2);
   margin-bottom: 30px;
 }
 .error-404 .btn {
-  background: #51678f;
+  background: var(--colour8);
   color: #fff;
   padding: 8px 30px;
 }
 .error-404 .btn:hover {
-  background: #3e4f6f;
+  background: var(--colour9);
 }
 @media (min-width: 992px) {
   .error-404 img {
@@ -1061,11 +1067,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 .footer .copyright {
   text-align: center;
-  color: #012970;
+  color: var(--colour2);
 }
 .footer .credits {
   padding-top: 5px;
   text-align: center;
   font-size: 13px;
-  color: #012970;
+  color: var(--colour2);
 }
