--- a/web/src/app/Components/login/login.component.html
+++ b/web/src/app/Components/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="flex h-screen bg-gray-100">
     <div class="m-auto md:w-1/3">
+        <app-logo></app-logo>
         <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-2">
             <h1 class="text-center text-4xl">Login</h1>
             <div class="mb-4">
@@ -27,6 +28,11 @@
                 </button>
                 <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
                     Forgot Password?
+                </a>
+            </div>
+            <div class="flex justify-center mt-4">
+                <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" routerLink="/register">
+                    Create an Account
                 </a>
             </div>
         </div>
