connected-frontend-auth-to-api

--- a/web/src/app/Components/home/home.component.html
+++ b/web/src/app/Components/home/home.component.html
@@ -57,16 +57,16 @@
             </div>
             <div class="{{ vis?'':'hidden' }}">
               <div class="space-y-1 px-2 pt-2 pb-3">
-                <a href="#"
+                <a routerLink="/"
                   class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">Home</a>
   
-                <a href="#"
+                <a href="#about"
                   class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">About Us</a>
   
-                <a href="#"
+                <a href="#contact"
                   class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">Contact Us</a>
               </div>
-              <a href="#"
+              <a routerLink="/login"
                 class="block w-full bg-gray-50 px-5 py-3 text-center font-medium text-indigo-600 hover:bg-gray-100">Log
                 in</a>
             </div>
