--- a/web/src/app/Components/logo/logo.component.html
+++ b/web/src/app/Components/logo/logo.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center">
+<div class="flex justify-center my-5">
     <a routerLink="{{action}}">
         <div class="flex flex-row">
             <img src="assets/images/logo.png" alt="logo" class="h-12 w-12">
