--- a/web/src/app/Components/login/login.component.html
+++ b/web/src/app/Components/login/login.component.html
@@ -1,43 +1,48 @@
+<app-alert class="{{alertHidden}}" [message]="alertMessage"></app-alert>
 <div class="flex h-screen bg-gray-100">
     <div class="m-auto md:w-1/3">
         <app-logo></app-logo>
         <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-2">
-            <h1 class="text-center text-4xl">Login</h1>
-            <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
-                    Username
-                </label>
-                <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="username" type="text" placeholder="Username">
-            </div>
-            <div class="mb-6">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
-                    Password
-                </label>
-                <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-                    id="password" type="password" placeholder="******************">
-                <p class="text-red-500 text-xs italic hidden">Please choose a password.</p>
-            </div>
-            <div class="flex items-center justify-between">
-                <button
-                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                    type="button">
-                    Sign In
-                </button>
-                <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
-                    Forgot Password?
-                </a>
-            </div>
-            <div class="flex justify-center mt-4">
-                <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" routerLink="/register">
-                    Create an Account
-                </a>
-            </div>
+            <form (ngSubmit)="onSubmit()">
+                <h1 class="text-center text-4xl">Login</h1>
+                <div class="mb-4">
+                    <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
+                        email
+                    </label>
+                    <input
+                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                        id="email" type="email" name="email" [(ngModel)]="email" placeholder="your email">
+                        <div class="text-red-500 text-xs italic">{{emailError}}</div>
+                </div>
+                <div class="mb-6">
+                    <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
+                        Password
+                    </label>
+                    <input
+                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                        id="password" type="password" name="password" [(ngModel)]="password" placeholder="******************">
+                    <p class="text-red-500 text-xs italic hidden">{{pwdError}}</p>
+                </div>
+                <div class="flex items-center justify-between">
+                    <button
+                        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                        type="submit">
+                        Sign In
+                    </button>
+                    <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
+                        Forgot Password?
+                    </a>
+                </div>
+                <div class="flex justify-center mt-4">
+                    <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
+                        routerLink="/register">
+                        Create an Account
+                    </a>
+                </div>
+            </form>
         </div>
         <p class="text-center text-gray-500 text-xs">
-            &copy;2020 Acme Corp. All rights reserved.
+            &copy;2022 Glorius Future School. All rights reserved.
         </p>
     </div>
 </div>
